tests/ui/lazy-type-alias/unconstrained-params-in-impl-due-to-overflow.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-params-in-impl-due-to-overflow.rs:4:6
   |
LL | impl<T> Loop<T> {}
   |      ^ unconstrained type parameter

error[E0275]: overflow normalizing the type alias `Loop<T>`
  --> $DIR/unconstrained-params-in-impl-due-to-overflow.rs:6:1
   |
LL | type Loop<T> = Loop<T>;
   | ^^^^^^^^^^^^
   |
   = note: in case this is a recursive type alias, consider using a struct, enum, or union instead

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0275.
For more information about an error, try `rustc --explain E0207`.
